--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.6.2",
     "browser-image-compression": "^1.0.14",
     "compressorjs": "^1.0.7",
+    "jszip": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "save-file": "^2.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
